--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>🎯 Jeu Devinette Ultime</title>
+<title>🎯 Jeu Devinette Ultime Amélioré</title>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-  /* Thèmes */
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin:0; padding:0; min-height:100vh;
@@ -31,7 +30,6 @@
     text-shadow: 0 0 5px #0ff, 0 0 10px #0ff;
   }
 
-  /* Container général */
   #app {
     max-width: 480px;
     width: 90vw;
@@ -40,23 +38,28 @@
     box-shadow: 0 0 30px rgba(0,173,181,0.7);
     padding: 20px 25px;
     box-sizing: border-box;
+    position: relative;
   }
 
-  /* Accueil */
-  #welcome {
-    display: flex; flex-direction: column; align-items:center; text-align:center;
+  #welcome, #game {
+    text-align: center;
     animation: fadeIn 1s ease forwards;
   }
+
+  #welcome {
+    display: flex; flex-direction: column; align-items:center; gap: 10px;
+  }
+
   #welcome h1 {
     font-size: 2.5rem;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
   }
   #welcome p {
     font-size: 1.1rem;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     line-height: 1.4;
   }
-  #welcome button, #welcome select {
+  #welcome button, #welcome select, #game button {
     cursor: pointer;
     font-size: 1.1rem;
     border:none;
@@ -68,26 +71,27 @@
     box-shadow: 0 0 10px #00adb5;
     transition: background 0.3s ease;
   }
-  #welcome button:hover, #welcome select:hover {
+  #welcome button:hover, #welcome select:hover, #game button:hover {
     background: #00adb5;
     color: #222831;
   }
 
-  /* Jeu */
   #game {
     display: none;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
   }
+
   #game h2 {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     font-size: 1.8rem;
   }
-  #game #info {
-    margin-bottom: 15px;
+  #info {
     font-weight: bold;
+    font-size: 1.2rem;
   }
-  #game input[type=number] {
+  #guessInput {
     padding: 12px;
     font-size: 1.2rem;
     border-radius: 10px;
@@ -96,29 +100,41 @@
     max-width: 200px;
     text-align: center;
   }
-  #game button {
-    margin-top: 15px;
-    background: #222831;
-    color: #eee;
-    border:none;
-    border-radius: 12px;
-    padding: 12px 30px;
-    font-size: 1.2rem;
-    cursor: pointer;
-    box-shadow: 0 0 10px #00adb5;
-    transition: background 0.3s ease;
-  }
-  #game button:hover {
-    background: #00adb5;
-    color: #222831;
-  }
   #feedback {
     margin-top: 15px;
     min-height: 40px;
     font-size: 1.3rem;
   }
 
-  /* Stats */
+  #timerContainer {
+    width: 100%;
+    max-width: 320px;
+    height: 20px;
+    background: #222831;
+    border-radius: 10px;
+    overflow: hidden;
+    margin: 10px auto 0 auto;
+    box-shadow: 0 0 10px #00adb5;
+  }
+  #timerBar {
+    height: 100%;
+    width: 100%;
+    background: #00adb5;
+    transition: width 1s linear, background-color 0.5s;
+  }
+
+  #timerText {
+    margin-top: 5px;
+    font-weight: bold;
+    font-size: 1.2rem;
+  }
+
+  #controls {
+    margin-top: 15px;
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+  }
   #stats {
     margin-top: 20px;
     background: #eeeeee;
@@ -127,39 +143,13 @@
     padding: 15px;
     font-size: 0.9rem;
     line-height: 1.4;
+    text-align: left;
+    max-width: 320px;
+  }
+  #stats h3 {
+    margin-top: 0;
   }
 
-  /* Timer */
-  #timer {
-    font-weight: bold;
-    font-size: 1.3rem;
-    margin-top: 10px;
-  }
-
-  /* Son */
-  #controls {
-    margin-top: 15px;
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-  }
-  #controls button {
-    font-size: 1rem;
-    padding: 8px 16px;
-    border-radius: 12px;
-    border:none;
-    cursor: pointer;
-    background: #222831;
-    color: #eee;
-    box-shadow: 0 0 8px #00adb5;
-    transition: background 0.3s ease;
-  }
-  #controls button:hover {
-    background: #00adb5;
-    color: #222831;
-  }
-
-  /* Confettis canvas */
   #confettiCanvas {
     position: fixed;
     pointer-events: none;
@@ -173,26 +163,25 @@
     to {opacity:1;}
   }
 
-  /* Responsive */
   @media (max-width: 480px) {
     #app {
       width: 95vw;
       padding: 15px 20px;
     }
-    #game input[type=number] {
+    #guessInput {
       width: 80%;
     }
   }
+
 </style>
 </head>
 <body class="theme-dark">
 
 <div id="app">
-  <!-- Accueil -->
-  <section id="welcome">
+  <section id="welcome" aria-label="Accueil du jeu">
     <h1>🎯 Bienvenue au Jeu Devinette Ultime !</h1>
     <p>Devine un nombre secret entre 1 et un maximum qui augmente à chaque niveau.<br>
-    Tu as <strong>30 secondes</strong> pour chaque niveau.<br>
+    Tu as un temps limité qui augmente aussi.<br>
     Après 5 essais ratés, un indice te sera donné.</p>
 
     <label for="themeSelector">Choisis ton thème :</label>
@@ -206,18 +195,21 @@
     <button id="startBtn">Jouer</button>
   </section>
 
-  <!-- Jeu -->
-  <section id="game" aria-live="polite" aria-atomic="true" aria-relevant="additions removals">
+  <section id="game" aria-live="polite" aria-atomic="true" aria-relevant="additions removals" role="main">
     <h2>Devine le nombre !</h2>
     <div id="info">Niveau : 1 | Tentatives : 0</div>
-    <input type="number" id="guessInput" placeholder="Entre un nombre" min="1" autocomplete="off" />
+    <input type="number" id="guessInput" placeholder="Entre un nombre" min="1" autocomplete="off" aria-label="Entrée du nombre deviné"/>
     <button id="submitGuessBtn">Valider</button>
     <div id="feedback" aria-live="assertive"></div>
-    <div id="timer" aria-label="Temps restant"></div>
+
+    <div id="timerContainer" aria-label="Barre de temps restant">
+      <div id="timerBar"></div>
+    </div>
+    <div id="timerText" aria-label="Temps restant"></div>
 
     <div id="controls">
-      <button id="muteMusicBtn">🎵 Musique : On</button>
-      <button id="muteSoundsBtn">🔈 Sons : On</button>
+      <button id="muteMusicBtn" aria-pressed="false">🎵 Musique : On</button>
+      <button id="muteSoundsBtn" aria-pressed="false">🔈 Sons : On</button>
     </div>
 
     <div id="stats" aria-label="Statistiques du joueur" role="region" tabindex="0">
@@ -225,6 +217,7 @@
       <p>Parties jouées : <span id="gamesPlayed">0</span></p>
       <p>Meilleur niveau : <span id="bestLevel">0</span></p>
       <p>Moyenne tentatives : <span id="avgAttempts">0</span></p>
+      <p>Trophées : <span id="trophies">Aucun</span></p>
     </div>
   </section>
 </div>
@@ -237,10 +230,11 @@
 <audio id="audioError" src="https://freesound.org/data/previews/109/109662_945474-lq.mp3" preload="auto"></audio>
 <audio id="audioWin" src="https://freesound.org/data/previews/276/276033_5121236-lq.mp3" preload="auto"></audio>
 <audio id="audioHint" src="https://freesound.org/data/previews/66/66238_634166-lq.mp3" preload="auto"></audio>
+<audio id="audioTick" src="https://freesound.org/data/previews/341/341695_5121236-lq.mp3" preload="auto"></audio>
 
 <script>
 (() => {
-  // Éléments DOM
+  // DOM
   const welcomeSection = document.getElementById('welcome');
   const gameSection = document.getElementById('game');
   const startBtn = document.getElementById('startBtn');
@@ -249,30 +243,42 @@
   const submitGuessBtn = document.getElementById('submitGuessBtn');
   const feedback = document.getElementById('feedback');
   const info = document.getElementById('info');
-  const timerDisplay = document.getElementById('timer');
+  const timerBar = document.getElementById('timerBar');
+  const timerText = document.getElementById('timerText');
   const gamesPlayedSpan = document.getElementById('gamesPlayed');
   const bestLevelSpan = document.getElementById('bestLevel');
   const avgAttemptsSpan = document.getElementById('avgAttempts');
+  const trophiesSpan = document.getElementById('trophies');
   const muteMusicBtn = document.getElementById('muteMusicBtn');
   const muteSoundsBtn = document.getElementById('muteSoundsBtn');
   const confettiCanvas = document.getElementById('confettiCanvas');
   const confettiCtx = confettiCanvas.getContext('2d');
 
-  // Son
+  // Audio
   const audioMusic = document.getElementById('audioMusic');
   const audioClick = document.getElementById('audioClick');
   const audioError = document.getElementById('audioError');
   const audioWin = document.getElementById('audioWin');
   const audioHint = document.getElementById('audioHint');
+  const audioTick = document.getElementById('audioTick');
+
+  // Config
+  const BASE_TIME = 30;    // secondes de base
+  const TIME_INCREMENT = 30; // par niveau
+  const MAX_LEVEL = 50;
+  const HINT_1_TRIES = 5;
+  const HINT_2_TRIES = 8;
 
   // Variables jeu
   let level = 1;
   let secretNumber = 0;
   let attempts = 0;
-  let timer = 30; // secondes
+  let timer = 0;
   let timerId = null;
   let gameActive = false;
-  let hintGiven = false;
+  let hintGiven1 = false;
+  let hintGiven2 = false;
+  let trophies = new Set();
 
   // Statistiques
   let gamesPlayed = 0;
@@ -281,8 +287,9 @@
 
   // Confettis
   const confettis = [];
+  let confettiRunning = false;
 
-  // Configuration thèmes
+  // Thèmes
   const themes = {
     dark: 'theme-dark',
     light: 'theme-light',
@@ -299,16 +306,15 @@
     audioMusic.play().catch(()=>{});
   }
 
-  // Gestion thème
+  // Thème
   function applyTheme(themeKey) {
     document.body.className = themes[themeKey] || themes.dark;
   }
-
-  themeSelector.addEventListener('change', (e) => {
+  themeSelector.addEventListener('change', e => {
     applyTheme(e.target.value);
   });
 
-  // Commencer partie
+  // Démarrer jeu
   startBtn.addEventListener('click', () => {
     playSound(audioClick);
     level = 1;
@@ -319,22 +325,23 @@
     gameActive = true;
   });
 
-  // Calcul max selon niveau
+  // Max nombre selon niveau
   function getMaxNumber(level) {
     return 20 + (level - 1) * 30;
   }
 
-  // Mise à jour infos jeu
+  // Update infos
   function updateInfo() {
-    info.textContent = `Niveau : ${level} | Tentatives : ${attempts} | Devine entre 1 et ${getMaxNumber(level)}`;
+    info.textContent = `Niveau : ${level} | Tentatives : ${attempts} | Entre 1 et ${getMaxNumber(level)}`;
   }
 
-  // Démarrer un niveau
+  // Démarrer niveau
   function startLevel() {
     secretNumber = Math.floor(Math.random() * getMaxNumber(level)) + 1;
     attempts = 0;
-    hintGiven = false;
-    timer = 30;
+    hintGiven1 = false;
+    hintGiven2 = false;
+    timer = BASE_TIME + (level - 1) * TIME_INCREMENT;
     updateInfo();
     feedback.textContent = '';
     guessInput.value = '';
@@ -342,30 +349,84 @@
     updateTimerDisplay();
     clearInterval(timerId);
     timerId = setInterval(countDown, 1000);
+    startTimerBar();
+    showLevelMessage();
   }
 
-  // Compte à rebours
+  // Message motivant
+  function showLevelMessage() {
+    const messages = [
+      "🔥 Prêt pour le défi ?",
+      "🚀 Tu vas tout déchirer !",
+      "🎯 Concentre-toi, tu es capable !",
+      "💡 Chaque niveau compte, go go !",
+      "⚡ Tu es une légende en devenir !"
+    ];
+    const msg = messages[Math.floor(Math.random() * messages.length)];
+    feedback.textContent = msg;
+  }
+
+  // Timer compte à rebours
   function countDown() {
     timer--;
     updateTimerDisplay();
+    updateTimerBar();
+
+    if (timer <= 5 && timer > 0) {
+      // Tic-tac urgent
+      playSound(audioTick);
+      timerBar.style.backgroundColor = '#ff5555';
+      timerText.style.color = '#ff5555';
+    } else {
+      timerBar.style.backgroundColor = '#00adb5';
+      timerText.style.color = '';
+    }
+
     if (timer <= 0) {
       clearInterval(timerId);
       endGame(false, '⏰ Temps écoulé ! Tu as perdu.');
     }
   }
 
-  // Afficher timer
+  // Update affichage timer
   function updateTimerDisplay() {
-    timerDisplay.textContent = `⏳ Temps restant : ${timer}s`;
+    timerText.textContent = `Temps restant : ${timer}s`;
   }
 
-  // Gestion soumission devinette
+  // Barre timer animée
+  let timerBarInterval = null;
+  function startTimerBar() {
+    if (timerBarInterval) clearInterval(timerBarInterval);
+    timerBar.style.width = '100%';
+    const totalTime = timer;
+    timerBarInterval = setInterval(() => {
+      let percent = (timer / totalTime) * 100;
+      timerBar.style.width = percent + '%';
+      if (percent <= 0) clearInterval(timerBarInterval);
+    }, 200);
+  }
+  function updateTimerBar() {
+    // width géré par timerBarInterval
+  }
+
+  // Gestion soumission
   submitGuessBtn.addEventListener('click', () => {
     if (!gameActive) return;
+    handleGuess();
+  });
+  guessInput.addEventListener('keypress', e => {
+    if (e.key === 'Enter') {
+      submitGuessBtn.click();
+    }
+  });
+
+  // Gestion devinette
+  function handleGuess() {
     const guess = parseInt(guessInput.value);
     if (!guess || guess < 1 || guess > getMaxNumber(level)) {
       feedback.textContent = `❗ Entre un nombre entre 1 et ${getMaxNumber(level)}.`;
       playSound(audioError);
+      wrongGuessEffect();
       return;
     }
     attempts++;
@@ -376,9 +437,11 @@
       feedback.textContent = `✅ Bravo ! Tu as trouvé le nombre ${secretNumber} en ${attempts} essais.`;
       confettiEffect(150);
       saveStats(true);
-      level++;
       gameActive = false;
       clearInterval(timerId);
+      clearInterval(timerBarInterval);
+      addTrophies();
+      level++;
       setTimeout(() => {
         startLevel();
         gameActive = true;
@@ -386,34 +449,43 @@
         feedback.textContent = '';
       }, 3500);
     } else {
+      playSound(audioError);
+      wrongGuessEffect();
       if (guess < secretNumber) {
         feedback.textContent = '🔼 Trop petit !';
       } else {
         feedback.textContent = '🔽 Trop grand !';
       }
-      playSound(audioError);
-
-      // Donne un indice après 5 essais ratés et si pas encore donné
-      if (attempts >= 5 && !hintGiven) {
-        giveHint();
+      // Indices progressifs
+      if (attempts >= HINT_1_TRIES && !hintGiven1) {
+        giveHint1();
+      }
+      if (attempts >= HINT_2_TRIES && !hintGiven2) {
+        giveHint2();
       }
     }
-  });
+    guessInput.value = '';
+  }
 
-  // Indice
-  function giveHint() {
-    hintGiven = true;
-    let hint = '';
-    if (secretNumber % 2 === 0) {
-      hint = 'Le nombre est pair.';
-    } else {
-      hint = 'Le nombre est impair.';
-    }
-    // Plus d’indices possibles
+  // Effet shake input mauvais guess
+  function wrongGuessEffect() {
+    guessInput.classList.add('error-shake');
+    setTimeout(() => guessInput.classList.remove('error-shake'), 400);
+  }
+
+  // Indices
+  function giveHint1() {
+    hintGiven1 = true;
+    let hint = (secretNumber % 2 === 0) ? 'Le nombre est pair.' : 'Le nombre est impair.';
     if (secretNumber % 3 === 0) hint += ' Il est multiple de 3.';
-    if (secretNumber % 5 === 0) hint += ' Il est multiple de 5.';
-
     feedback.textContent += ` 💡 Indice : ${hint}`;
+    playSound(audioHint);
+  }
+  function giveHint2() {
+    hintGiven2 = true;
+    const half = Math.floor(getMaxNumber(level) / 2);
+    const rangeHint = secretNumber <= half ? `entre 1 et ${half}` : `entre ${half + 1} et ${getMaxNumber(level)}`;
+    feedback.textContent += ` 💡 Deuxième indice : Le nombre est ${rangeHint}.`;
     playSound(audioHint);
   }
 
@@ -421,12 +493,15 @@
   function endGame(win, msg) {
     gameActive = false;
     clearInterval(timerId);
+    clearInterval(timerBarInterval);
     feedback.textContent = msg;
     saveStats(false);
+    showFinalTrophies();
     setTimeout(() => {
       welcomeSection.style.display = 'flex';
       gameSection.style.display = 'none';
-    }, 3500);
+      feedback.textContent = '';
+    }, 4500);
   }
 
   // Sons
@@ -438,11 +513,13 @@
     }
   }
 
-  // Stats locales
+  // Stats locale
   function loadStats() {
     gamesPlayed = parseInt(localStorage.getItem('gamesPlayed')) || 0;
     totalAttempts = parseInt(localStorage.getItem('totalAttempts')) || 0;
     bestLevel = parseInt(localStorage.getItem('bestLevel')) || 0;
+    const storedTrophies = localStorage.getItem('trophies');
+    if (storedTrophies) trophies = new Set(JSON.parse(storedTrophies));
   }
   function saveStats(win) {
     if (win) {
@@ -453,12 +530,29 @@
     localStorage.setItem('gamesPlayed', gamesPlayed);
     localStorage.setItem('totalAttempts', totalAttempts);
     localStorage.setItem('bestLevel', bestLevel);
+    localStorage.setItem('trophies', JSON.stringify(Array.from(trophies)));
     updateStats();
   }
   function updateStats() {
     gamesPlayedSpan.textContent = gamesPlayed;
     bestLevelSpan.textContent = bestLevel;
     avgAttemptsSpan.textContent = gamesPlayed ? (totalAttempts / gamesPlayed).toFixed(2) : '0';
+    trophiesSpan.textContent = trophies.size ? Array.from(trophies).join(', ') : 'Aucun';
+  }
+
+  // Trophées simples
+  function addTrophies() {
+    if (level === 5) trophies.add('🏅 Débutant');
+    if (level === 10) trophies.add('🥉 Amateur');
+    if (level === 20) trophies.add('🥈 Expert');
+    if (level === 30) trophies.add('🥇 Maître');
+    if (level === 40) trophies.add('🏆 Légende');
+    saveStats(false);
+  }
+  function showFinalTrophies() {
+    if (trophies.size) {
+      feedback.textContent += ` 🎉 Trophées obtenus : ${Array.from(trophies).join(', ')}`;
+    }
   }
 
   // Confettis
@@ -507,7 +601,6 @@
       requestAnimationFrame(runConfetti);
     }
   }
-  let confettiRunning = false;
   function runConfetti() {
     confettiCtx.clearRect(0,0,confettiCanvas.width,confettiCanvas.height);
     for (let i = confettis.length - 1; i >= 0; i--) {
@@ -525,17 +618,20 @@
     }
   }
 
-  // Contrôle musiques et sons
+  // Sons On/Off
   muteMusicBtn.addEventListener('click', () => {
     audioMusic.muted = !audioMusic.muted;
     muteMusicBtn.textContent = audioMusic.muted ? '🎵 Musique : Off' : '🎵 Musique : On';
+    muteMusicBtn.setAttribute('aria-pressed', audioMusic.muted);
   });
   muteSoundsBtn.addEventListener('click', () => {
-    [audioClick, audioError, audioWin, audioHint].forEach(a => a.muted = !a.muted);
-    muteSoundsBtn.textContent = audioClick.muted ? '🔈 Sons : Off' : '🔈 Sons : On';
+    const mute = !audioClick.muted;
+    [audioClick, audioError, audioWin, audioHint, audioTick].forEach(a => a.muted = mute);
+    muteSoundsBtn.textContent = mute ? '🔈 Sons : Off' : '🔈 Sons : On';
+    muteSoundsBtn.setAttribute('aria-pressed', mute);
   });
 
-  // Ajuster taille canvas confettis
+  // Canvas resize
   function resizeCanvas() {
     confettiCanvas.width = window.innerWidth;
     confettiCanvas.height = window.innerHeight;
@@ -543,17 +639,27 @@
   window.addEventListener('resize', resizeCanvas);
   resizeCanvas();
 
-  // Initialisation
+  // Init
   setup();
-
-  // Accessibilité : Entrée au clavier sur input
-  guessInput.addEventListener('keypress', e => {
-    if (e.key === 'Enter') {
-      submitGuessBtn.click();
-    }
-  });
-
 })();
 </script>
+
+<style>
+/* shake animation for input wrong guess */
+#error-shake {
+  animation: shake 0.4s;
+}
+@keyframes shake {
+  0% { transform: translateX(0);}
+  25% { transform: translateX(-5px);}
+  50% { transform: translateX(5px);}
+  75% { transform: translateX(-5px);}
+  100% { transform: translateX(0);}
+}
+.error-shake {
+  animation: shake 0.4s;
+}
+</style>
+
 </body>
 </html>
